fixed content in collapse

--- a/src/components/Search/index.module.css
+++ b/src/components/Search/index.module.css
@@ -74,6 +74,9 @@
   left:0;
   top: 26px;
   width: 100%;
+  max-width: 444px;
+  left: 50%;
+  transform: translateX(-50%);
   /* border: 2px solid var(--color-border);
   border-width: 0 2px 2px 2px; */
   padding-left: 0;
